--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Portfolio - Dave Watson</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Back To Top</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -53,7 +53,7 @@
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">Dave Watson</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">Wubba lubba dub dub = Help me, I am in great pain.</h2>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5">asdasdasda</h2>
           <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
         </div>
       </div>
@@ -192,13 +192,13 @@
         </div>
 
         <div class="social d-flex justify-content-center">
-          <a href="#" class="mx-2">
+          <a href="https://twitter.com/watsodave" class="mx-2">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#" class="mx-2">
+          <a href="https://www.facebook.com/watsodave" class="mx-2">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="#" class="mx-2">
+          <a href="https://dwatsx.github.io" class="mx-2">
             <i class="fab fa-github"></i>
           </a>
         </div>
