--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">Dave Watson</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">asdasdasda</h2>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5">Software Development, Web Design, Remote Server Management</h2>
           <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
         </div>
       </div>
