--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">About Dave</h2>
-            <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+            <p class="text-white-50">Dave is a self-proclaimed "nerd" who relishes in all things tech. A veteran to secure shell remote server management, Dave
+              has recently expanded his repertoire of tech knowledge by returning to college to study computer programming. Dave is now as eager as ever to secure
+			  a professional position in the tech industry.</p>
           </div>
         </div>
-        <img src="img/ipad.png" class="img-fluid" alt="">
+        <img src="img/bgimage1.png" class="img-fluid" alt="">
       </div>
     </section>
 
