--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			  a professional position in the tech industry.</p>
           </div>
         </div>
-        <img src="img/bgimage2.png" class="img-fluid" alt="">
+        <img src="img/thinker.png" class="img-fluid" alt="">
 		<br><br>
       </div>
     </section>
