--- a/index.html
+++ b/index.html
@@ -77,14 +77,13 @@
 
     <!-- Projects Section -->
     <section id="projects" class="projects-section bg-light">
-	<h2>Projects</h2>
+	<center><h2>Projects</h2></center>
       <div class="container">
 
         <!-- Featured Project Row -->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/3VyOaMp47Q4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            <!-- <img class="img-fluid mb-3 mb-lg-0" src="img/avalon1.png" alt=""> -->
+            <img class="img-fluid mb-3 mb-lg-0" src="img/avalon1.png" alt="">
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
