--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
 
     <!-- Projects Section -->
     <section id="projects" class="projects-section bg-light">
-	<center><h2>Projects</h2></center>
       <div class="container">
-
+		<center><h2>Projects</h2></center><br>
         <!-- Featured Project Row -->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
