--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h4>Avalon</h4>
-              <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+              <p class="text-black-50 mb-0">Avalon is a public, free-to-play, family-friendly Minecraft server, developed as a content-rich MMORPG. The server has been operating since April 2016, and continues to flourish today.
+				<br>Server IP: defend.avalon.today</p>
             </div>
           </div>
         </div>
