--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                  <h4 class="text-white">Sample Assignment Criteria</h4>
-                  <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                  <h4 class="text-white">C# Programming Assignments</h4>
+                  <p class="mb-0 text-white-50">The image on the left displays a sample GUI laid out for a programming assignment, in which students were tasked with creating an airline
+					reservation system. Although the sample GUI included buttons representing the seats, there was no requirement to make the buttons do anything, and served as a rather pointless visual representation.</p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
                 </div>
               </div>
@@ -121,7 +122,8 @@
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-right">
                   <h4 class="text-white">What Dave Did</h4>
-                  <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                  <p class="mb-0 text-white-50">Finding the sample GUI to be stale and simplistic, Dave improved the design, and added dynamic functionality to the buttons. This allowed the buttons to visually indicate
+					which seats were or were not reserved, according to their colour. It is this kind of innovative, outside the box thinking that makes Dave a valuable member of any team.</p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
                 </div>
               </div>
