--- a/index.html
+++ b/index.html
@@ -135,25 +135,6 @@
       </div>
     </section>
 
-    <!-- Signup Section -->
-    <section id="signup" class="signup-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-10 col-lg-8 mx-auto text-center">
-
-            <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-            <h2 class="text-white mb-5">Send Dave a quick message!</h2>
-
-            <form class="form-inline d-flex" action="mailto:watsodave@hotmail.com">
-              <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Type a message...">
-              <button type="submit" class="btn btn-primary mx-auto">Submit</button>
-            </form>
-
-          </div>
-        </div>
-      </div>
-    </section>
-
     <!-- Contact Section -->
     <section class="contact-section bg-black">
       <div class="container">
@@ -178,8 +159,8 @@
                 <h4 class="text-uppercase m-0">Email</h4>
                 <hr class="my-4">
                 <div class="small text-black-50">
-                  <a href="#">watsodave@hotmail.com</a>
-				  <a href="#">watsodave@gmail.com</a>
+                  <a href="mailto:watsodave@hotmail.com">watsodave@hotmail.com</a>
+				  <a href="mailto:watsodave@gmail.com">watsodave@gmail.com</a>
                 </div>
               </div>
             </div>
