--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <!-- Contact Section -->
     <section id="signup" class="contact-section bg-black">
       <div class="container">
-		<center><h2>Contact</h2></center><br>
+		<center><h2 style="color:white">Contact</h2></center><br>
         <div class="row">
 
           <div class="col-md-4 mb-3 mb-md-0">
