--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Phone</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">+1 (519) 573-1566</div>
+                <div class="small text-black-50">Available Upon Request</div>
               </div>
             </div>
           </div>
