--- a/index.html
+++ b/index.html
@@ -130,6 +130,25 @@
             </div>
           </div>
         </div>
+	      
+	<!-- Project Three Row -->
+        <div class="row justify-content-center no-gutters">
+          <div class="col-lg-6">
+            <img class="img-fluid" src="img/after.png" alt="">
+          </div>
+          <div class="col-lg-6 order-lg-first">
+            <div class="bg-black text-center h-100 project">
+              <div class="d-flex h-100">
+                <div class="project-text w-100 my-auto text-center text-lg-right">
+                  <h4 class="text-white">What Dave Did</h4>
+                  <p class="mb-0 text-white-50">Finding the sample GUI to be stale and simplistic, Dave improved the design, and added dynamic functionality to the buttons. This allowed the buttons to visually indicate
+					which seats were or were not reserved, according to their colour. It is this kind of innovative, outside the box thinking that makes Dave a valuable member of any team.</p>
+                  <hr class="d-none d-lg-block mb-0 mr-0">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
       </div>
     </section>
