--- a/index.html
+++ b/index.html
@@ -132,22 +132,18 @@
         </div>
 	      
 	<!-- Project Three Row -->
-	<br><br>
-	<h1>Space Force</h2>
-        <div class="row justify-content-center no-gutters">
-          <div class="col-lg-6">
-            <img class="img-fluid" src="img/after.png" alt="">
+	<br><center><h2>Projects</h2></center><br>
+        <!-- Featured Project Row -->
+        <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+          <div class="col-xl-8 col-lg-7">
+            <img class="img-fluid mb-3 mb-lg-0" src="img/avalon1.png" alt="">
           </div>
-          <div class="col-lg-6 order-lg-first">
-            <div class="bg-black text-center h-100 project">
-              <div class="d-flex h-100">
-                <div class="project-text w-100 my-auto text-center text-lg-right">
-                  <h4 class="text-white">What Dave Did</h4>
-                  <p class="mb-0 text-white-50">Finding the sample GUI to be stale and simplistic, Dave improved the design, and added dynamic functionality to the buttons. This allowed the buttons to visually indicate
-					which seats were or were not reserved, according to their colour. It is this kind of innovative, outside the box thinking that makes Dave a valuable member of any team.</p>
-                  <hr class="d-none d-lg-block mb-0 mr-0">
-                </div>
-              </div>
+          <div class="col-xl-4 col-lg-5">
+            <div class="featured-text text-center text-lg-left">
+              <h4>Avalon</h4>
+              <p class="text-black-50 mb-0">Avalon is a public, free-to-play, family-friendly Minecraft server, developed as a content-rich MMORPG. The server has been operating since April 2016, and continues to flourish today.
+				<br>Although Dave operates this server primarily as a hobby and in his free time, it has taught him a variety of technical skills, including remote management of a dedicated server via secure shell (SSH) protocols.
+				<br>Server IP: defend.avalon.today</p>
             </div>
           </div>
         </div>
