--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </div>
         </div>
 
-        <!-- Project One Row -->
+        <!-- C# Assignment Before -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
             <img class="img-fluid" src="img/before.png" alt="">
@@ -112,7 +112,7 @@
           </div>
         </div>
 
-        <!-- Project Two Row -->
+        <!-- C# Assignment After -->
         <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
             <img class="img-fluid" src="img/after.png" alt="">
@@ -131,9 +131,8 @@
           </div>
         </div>
 	      
-	<!-- Project Three Row -->
-	<br><center><h2>Projects</h2></center><br>
-        <!-- Featured Project Row -->
+	<!-- Space Force -->
+	<br>
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
             <img class="img-fluid mb-3 mb-lg-0" src="img/avalon1.png" alt="">
