--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
 	<br>
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
-            <img class="img-fluid mb-3 mb-lg-0" src="img/avalon1.png" alt="">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/LlU45to6NqM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
-              <h4>Avalon</h4>
+              <h4>Space Force</h4>
               <p class="text-black-50 mb-0">Avalon is a public, free-to-play, family-friendly Minecraft server, developed as a content-rich MMORPG. The server has been operating since April 2016, and continues to flourish today.
 				<br>Although Dave operates this server primarily as a hobby and in his free time, it has taught him a variety of technical skills, including remote management of a dedicated server via secure shell (SSH) protocols.
 				<br>Server IP: defend.avalon.today</p>
