--- a/index.html
+++ b/index.html
@@ -140,9 +140,8 @@
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h4>Space Force</h4>
-              <p class="text-black-50 mb-0">Avalon is a public, free-to-play, family-friendly Minecraft server, developed as a content-rich MMORPG. The server has been operating since April 2016, and continues to flourish today.
-				<br>Although Dave operates this server primarily as a hobby and in his free time, it has taught him a variety of technical skills, including remote management of a dedicated server via secure shell (SSH) protocols.
-				<br>Server IP: defend.avalon.today</p>
+              <p class="text-black-50 mb-0">Space Force is a game Dave created in his third semester at Conestoga College. The game is a classic arcade-style, top-down shooter, reminiscent of Space Invaders.
+				<br>Dave wrote Space Force entirely in C#, using the MonoGame framework.
             </div>
           </div>
         </div>
