--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/LlU45to6NqM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="col-xl-4 col-lg-5">
-            <div class="featured-text text-center text-lg-right">
+            <div class="featured-text text-center text-lg-left">
               <h4>Space Force</h4>
               <p class="text-black-50 mb-0">Space Force is a game Dave created in his third semester at Conestoga College. The game is a classic arcade-style, top-down shooter, reminiscent of Space Invaders.
 				<br>Dave wrote Space Force entirely in C#, using the MonoGame framework.
