--- a/index.html
+++ b/index.html
@@ -140,8 +140,9 @@
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h4>Space Force</h4>
-              <p class="text-black-50 mb-0">Space Force is a game Dave created in his third semester at Conestoga College. The game is a classic arcade-style, top-down shooter, reminiscent of Space Invaders.
-				<br>Dave wrote Space Force entirely in C#, using the MonoGame framework.
+              <p class="text-black-50 mb-0">Space Force is a game Dave created in his third semester at Conestoga College, in PROG2370 (Game Programming with Data Structures). The game was written entirely in C#, using the MonoGame framework.<br>
+		Space Force is a classic arcade-style, top-down shooter, reminiscent of Space Invaders. It is a challenging game that gets progressively more difficult over time. In addition, players have the ability to upgrade their weapons, until they have powered up enough to use their ultimate ability!<br>
+		This gives the game a feeling of progression and accomplishment, and makes it quite addictive.
             </div>
           </div>
         </div>
