--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <h4>Space Force</h4>
               <p class="text-black-50 mb-0">Space Force is a game Dave created in his third semester at Conestoga College, in PROG2370 (Game Programming with Data Structures). The game was written entirely in C#, using the MonoGame framework.<br>
 		Space Force is a classic arcade-style, top-down shooter, reminiscent of Space Invaders. It is a challenging game that gets progressively more difficult over time. In addition, players have the ability to upgrade their weapons, until they have powered up enough to use their ultimate ability!<br>
-		This gives the game a feeling of progression and accomplishment, and makes it quite addictive.
+		This gives the game a feeling of progression and accomplishment, and makes it quite addictive and fun!
             </div>
           </div>
         </div>
