--- a/index.html
+++ b/index.html
@@ -78,22 +78,22 @@
     <!-- Projects Section -->
     <section id="projects" class="projects-section bg-light">
       <div class="container">
-		<center><h2>Projects</h2></center><br>
-        <!-- Featured Project Row -->
+	<center><h2>Projects</h2></center><br>
+        <!-- Featured Project Row (Space Force)-->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
-            <img class="img-fluid mb-3 mb-lg-0" src="img/avalon1.png" alt="">
+            <iframe width="672" height="378" src="https://www.youtube.com/embed/LlU45to6NqM?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
-              <h4>Avalon</h4>
-              <p class="text-black-50 mb-0">Avalon is a public, free-to-play, family-friendly Minecraft server, developed as a content-rich MMORPG. The server has been operating since April 2016, and continues to flourish today.
-				<br>Although Dave operates this server primarily as a hobby and in his free time, it has taught him a variety of technical skills, including remote management of a dedicated server via secure shell (SSH) protocols.
-				<br>Server IP: defend.avalon.today</p>
+              <h4>Space Force</h4>
+              <p class="text-black-50 mb-0">Space Force is a game Dave created in his third semester at Conestoga College, in PROG2370 (Game Programming with Data Structures). The game was written entirely in C#, using the MonoGame framework.<br>
+		Space Force is a classic arcade-style, top-down shooter, reminiscent of Space Invaders. It is a challenging game that gets progressively more difficult over time. In addition, players have the ability to upgrade their weapons, until they have powered up enough to use their ultimate ability!<br>
+		This gives the game a feeling of progression and accomplishment, and makes it quite addictive and fun!
             </div>
           </div>
-        </div>
-
+        </div>      
+	      
         <!-- C# Assignment Before -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
@@ -132,18 +132,16 @@
           </div>
         </div>
 	      
-	<!-- Space Force -->
-	<br><br>
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
-            <iframe width="672" height="378" src="https://www.youtube.com/embed/LlU45to6NqM?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <img class="img-fluid mb-3 mb-lg-0" src="img/avalon1.png" alt="">
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
-              <h4>Space Force</h4>
-              <p class="text-black-50 mb-0">Space Force is a game Dave created in his third semester at Conestoga College, in PROG2370 (Game Programming with Data Structures). The game was written entirely in C#, using the MonoGame framework.<br>
-		Space Force is a classic arcade-style, top-down shooter, reminiscent of Space Invaders. It is a challenging game that gets progressively more difficult over time. In addition, players have the ability to upgrade their weapons, until they have powered up enough to use their ultimate ability!<br>
-		This gives the game a feeling of progression and accomplishment, and makes it quite addictive and fun!
+              <h4>Avalon</h4>
+              <p class="text-black-50 mb-0">Avalon is a public, free-to-play, family-friendly Minecraft server, developed as a content-rich MMORPG. The server has been operating since April 2016, and continues to flourish today.
+				<br>Although Dave operates this server primarily as a hobby and in his free time, it has taught him a variety of technical skills, including remote management of a dedicated server via secure shell (SSH) protocols.
+				<br>Server IP: defend.avalon.today</p>
             </div>
           </div>
         </div>
