--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <section id="projects" class="projects-section bg-light">
       <div class="container">
 	<center><h2>Projects</h2></center><br>
+	      
         <!-- Featured Project Row (Space Force)-->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
@@ -89,7 +90,8 @@
               <h4>Space Force</h4>
               <p class="text-black-50 mb-0">Space Force is a game Dave created in his third semester at Conestoga College, in PROG2370 (Game Programming with Data Structures). The game was written entirely in C#, using the MonoGame framework.<br>
 		Space Force is a classic arcade-style, top-down shooter, reminiscent of Space Invaders. It is a challenging game that gets progressively more difficult over time. In addition, players have the ability to upgrade their weapons, until they have powered up enough to use their ultimate ability!<br>
-		This gives the game a feeling of progression and accomplishment, and makes it quite addictive and fun!
+		This gives the game a feeling of progression and accomplishment, and makes it quite addictive and fun!</p>
+		    <p style="font-weight:bold">NOTE: The video must be viewed in at least 720p HD!</p>
             </div>
           </div>
         </div>      
