--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
             </div>
           </div>
         </div>
-	  
+
+	<!-- MVC using ASP.NET -->
 	<br><br>
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
@@ -148,7 +149,23 @@
             </div>
           </div>
         </div>
-
+      </div>
+	      
+	<!-- Avalon -->
+	<br><br>
+        <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+          <div class="col-xl-8 col-lg-7">
+            <img class="img-fluid mb-3 mb-lg-0" src="img/avalon1.png" alt="">
+          </div>
+          <div class="col-xl-4 col-lg-5">
+            <div class="featured-text text-center text-lg-left">
+              <h4>Avalon</h4>
+              <p class="text-black-50 mb-0">Avalon is a public, free-to-play, family-friendly Minecraft server, developed as a content-rich MMORPG. The server has been operating since April 2016, and continues to flourish today.
+				<br>Although Dave operates this server primarily as a hobby and in his free time, it has taught him a variety of technical skills, including remote management of a dedicated server via secure shell (SSH) protocols.
+				<br>Server IP: defend.avalon.today</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
