--- a/index.html
+++ b/index.html
@@ -137,15 +137,16 @@
         <!-- MVC using ASP.NET -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/aspNet.png" alt="">
+	  <a target="_blank" class="img-fluid" href="img_forest.jpg">
+  	    <img src="img/aspNet.png" alt="ASP.NET MVC Example">
+	  </a>
           </div>
           <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-left">
                   <h4 class="text-white">Full-Stack Web Solutions</h4>
-                  <p class="mb-0 text-white-50">The image on the left displays a sample GUI laid out for a programming assignment, in which students were tasked with creating an airline
-					reservation system. Although the sample GUI included buttons representing the seats, there was no requirement to make the buttons do anything, and served as a rather pointless visual representation.</p>
+                  <p class="mb-0 text-white-50">Lorem ipsum.</p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
                 </div>
               </div>
