--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
           <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
         </div>
       </div>
-    </header>
 
     <!-- About Section -->
     <section id="about" class="about-section text-center">
@@ -137,8 +136,8 @@
         <!-- MVC using ASP.NET -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
-	  <a target="_blank" class="img-fluid" href="img_forest.jpg">
-  	    <img src="img/aspNet.png" alt="ASP.NET MVC Example">
+	  <a target="_blank" href="img/aspNet.png">
+  	    <img src="img/aspNet.png" class="img-fluid" alt="ASP.NET MVC Example">
 	  </a>
           </div>
           <div class="col-lg-6">
