--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                  <h4 class="text-white">Full-Stack Web Solutions</h4>
-                  <p class="mb-0 text-white-50">Lorem ipsum.</p>
+                  <h4 class="text-white">Full-Stack Web Solutions, using MVC and ASP.NET</h4>
+                  <p class="mb-0 text-white-50">One of Dave's favourite subjects was "Microsoft Web Technologies", in which he was tasked with creating database-integrated web sites, using the ASP.NET framework. Having full control over the entire web solution, from front-end to back-end, was something Dave truly enjoyed.</p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
                 </div>
               </div>
