--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
         <!-- C# Assignment Before -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/before.png" alt="">
+	  <a target="_blank" href="img/before.png">
+  	    <img src="img/before.png" class="img-fluid" alt="Assignment Example">
+	  </a>
           </div>
           <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
@@ -117,7 +119,9 @@
         <!-- C# Assignment After -->
         <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/after.png" alt="">
+          <a target="_blank" href="img/after.png">
+  	    <img src="img/after.png" class="img-fluid" alt="Dave's Finished Assignment">
+	  </a>
           </div>
           <div class="col-lg-6 order-lg-first">
             <div class="bg-black text-center h-100 project">
@@ -145,7 +149,8 @@
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-left">
                   <h4 class="text-white">Full-Stack Web Solutions, using MVC and ASP.NET</h4>
-                  <p class="mb-0 text-white-50">One of Dave's favourite subjects was "Microsoft Web Technologies", in which he was tasked with creating database-integrated web sites, using the ASP.NET framework. Having full control over the entire web solution, from front-end to back-end, was something Dave truly enjoyed.</p>
+                  <p class="mb-0 text-white-50">One of Dave's favourite subjects was "Microsoft Web Technologies", in which he was tasked with creating database-integrated web sites, using the ASP.NET framework. Having full control over the entire web solution, from front-end to back-end, was something Dave truly enjoyed.
+			In the example on the left, @TempData variables were used to get the "Record Updated" message to display. You can click on the image for a closer look.</p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
                 </div>
               </div>
