--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
 	  <a target="_blank" href="img/aspNet.png">
-  	    <img src="img/aspNet.png" class="img-fluid" alt="ASP.NET MVC Example">
+  	    <img src="img/aspNetSmall.png" class="img-fluid" alt="ASP.NET MVC Example">
 	  </a>
           </div>
           <div class="col-lg-6">
