--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
 	  <a target="_blank" href="img/before.png">
-  	    <img src="img/before.png" class="img-fluid" alt="Assignment Example">
+  	    <img src="img/before.png" id="imgBefore" class="img-fluid" alt="Assignment Example">
 	  </a>
           </div>
           <div class="col-lg-6">
@@ -121,7 +121,7 @@
         <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
           <a target="_blank" href="img/after.png">
-  	    <img src="img/after.png" class="img-fluid" alt="Dave's Finished Assignment">
+  	    <img src="img/after.png" id="imgAfter" class="img-fluid" alt="Dave's Finished Assignment">
 	  </a>
           </div>
           <div class="col-lg-6 order-lg-first">
@@ -142,7 +142,7 @@
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
 	  <a target="_blank" href="img/aspNet.png">
-  	    <img src="img/aspNetSmall.png" class="img-fluid" alt="ASP.NET MVC Example">
+  	    <img src="img/aspNetSmall.png" id="imgAsp" class="img-fluid" alt="ASP.NET MVC Example">
 	  </a>
           </div>
           <div class="col-lg-6">
