--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <!-- Projects Section -->
     <section id="projects" class="projects-section bg-light">
       <div class="container">
-	<center><h1>Projects</h1></center><br>
+	<center><h1 style="text-color:black">Projects</h1></center><br>
 	      
         <!-- Featured Project Row (Space Force)-->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
