--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <div class="project-text w-100 my-auto text-center text-lg-left">
                   <h4 class="text-white">Full-Stack Web Solutions, using MVC and ASP.NET</h4>
                   <p class="mb-0 text-white-50">One of Dave's favourite subjects was "Microsoft Web Technologies", in which he was tasked with creating database-integrated web sites, using the ASP.NET framework. Having full control over the entire web solution, from front-end to back-end, was something Dave truly enjoyed.
-			In the example on the left, @TempData variables were used in the Controll and the View, to get the "Record Updated" message to display. You can click on the image for a closer look.</p>
+			In the example on the left, a @TempData variable is assigned in the Controller, to get the "Record Updated" message to display on this View. You can click on the image for a closer look.</p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
                 </div>
               </div>
