--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <h4 class="text-uppercase m-0">Email</h4>
                 <hr class="my-4">
                 <div class="small text-black-50">
-                  <a href="mailto:watsodave@hotmail.com">watsodave@hotmail.com</a>
+                  <a href="mailto:watsodave@hotmail.com">watsodave@gmail.com</a>
                 </div>
               </div>
             </div>
