--- a/index.html
+++ b/index.html
@@ -165,7 +165,9 @@
 	<br><br>
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
-            <img class="img-fluid mb-3 mb-lg-0" src="img/avalon1.png" alt="">
+	  <a target="_blank" href="https://www.youtube.com/watch?v=3VyOaMp47Q4">
+  	    <img src="img/avalon1.png" id="imgAvalon" class="img-fluid mb-3 mb-lg-0" alt="Avalon In-Game Screenshot">
+	  </a>
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
