--- a/index.html
+++ b/index.html
@@ -173,8 +173,9 @@
             <div class="featured-text text-center text-lg-left">
               <h4>Avalon</h4>
               <p class="text-black-50 mb-0">Avalon is a public, free-to-play, family-friendly Minecraft server, developed as a content-rich MMORPG. The server has been operating since April 2016, and continues to flourish today.
-				<br>Although Dave operates this server primarily as a hobby and in his free time, it has taught him a variety of technical skills, including remote management of a dedicated server via secure shell (SSH) protocols.
-				<br>Server IP: defend.avalon.today</p>
+		<br>Although Dave operates this server primarily as a hobby and in his free time, it has taught him a variety of technical skills, including remote management of a dedicated server via LINUX command-line interface, and secure shell (SSH) protocols.
+		<br>Server IP: defend.avalon.today
+	      </p>
             </div>
           </div>
         </div>
