--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="project-text w-100 my-auto text-center text-lg-right">
                   <h4 class="text-white">What Dave Did</h4>
                   <p class="mb-0 text-white-50">Finding the sample GUI to be stale and simplistic, Dave improved the design, and added dynamic functionality to the buttons. This allowed the buttons to visually indicate
-					which seats were or were not reserved, according to their colour. It is this kind of innovative, outside the box thinking that makes Dave a valuable member of any team.</p>
+		    which seats were or were not reserved, according to their colour. Users could also click directly on a seat to reserve it. It is this kind of innovative, outside the box thinking that makes Dave a valuable member of any team.</p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
                 </div>
               </div>
