--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           <div class="col-lg-8 mx-auto">
 	    <center>
             <h2 class="text-white mb-4">About Dave</h2>
-            <p class="text-white-50">Dave is a self-proclaimed "nerd" who relishes in all things tech. A veteran to LINUX-based, secure shell remote server management, Dave
-              has recently expanded his repertoire of tech knowledge by returning to college to study computer programming. Dave is now as eager as ever to secure
+            <p class="text-white-50">Dave is a self-proclaimed "nerd" who relishes in all things tech. After spending several years working in sales and finance, Dave
+              has recently expanded his repertoire of tech knowledge by returning to college to study computer programming. Dave is now extremely eager to secure
 		a professional position in the tech industry.
 		 <img src="img/programmer.png" class="img-fluid" alt="">
 	    </p>
