--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <h4>Space Force</h4>
               <p class="text-black-50 mb-0">Space Force is a game Dave created in his third semester at Conestoga College, in PROG2370 (Game Programming with Data Structures). The game was written entirely in C#, using the MonoGame framework.<br>
 		Space Force is a classic arcade-style, top-down shooter, reminiscent of Space Invaders. It is a challenging game that gets progressively more difficult over time. In addition, players have the ability to upgrade their weapons, until they have powered up enough to use their ultimate ability!<br>
-		 Dave learned a great deal about object-oriented programming in C# while having a lot of fun making this game.</p>
+		 Dave learned a great deal about object-oriented programming in C#, while having a lot of fun making this game!</p>
 		    <p style="font-weight:bold">NOTE: The video must be viewed in at least 720p HD!</p>
             </div>
           </div>
