--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 					<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
 						<div class="col-lg-6">
 							<a target="_blank" href="img/affinityLogin.png">
-								<img src="img/affinityLogin.png" id="imgBefore" class="img-fluid" alt="Assignment Example">
+								<img src="img/affinityLogin.png" id="imgBefore" class="img-fluid" alt="Affinity Login Page">
 							</a>
 						</div>
 						<div class="col-lg-6">
@@ -166,7 +166,7 @@
 					<div class="row justify-content-center no-gutters">
 						<div class="col-lg-6">
 							<a target="_blank" href="img/affinityProfileLarge.png">
-								<img src="img/affinityProfileLarge.png" id="imgAfter" class="img-fluid" alt="Dave's Finished Assignment">
+								<img src="img/affinityProfileLarge.png" id="imgAfter" class="img-fluid" alt="Affinity Profile Page">
 							</a>
 						</div>
 						<div class="col-lg-6 order-lg-first">
@@ -188,7 +188,7 @@
 					<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
 						<div class="col-lg-6">
 							<a target="_blank" href="img/affinityFriends.png">
-								<img src="img/affinityFriends.png" id="imgAsp" class="img-fluid" alt="ASP.NET MVC Example">
+								<img src="img/affinityFriends.png" id="imgAsp" class="img-fluid" alt="Affinity Friends Page">
 							</a>
 						</div>
 						<div class="col-lg-6">
@@ -214,7 +214,7 @@
 					<div class="row justify-content-center no-gutters">
 						<div class="col-lg-6">
 							<a target="_blank" href="img/affinityChat.png">
-								<img src="img/affinityChat.png" id="imgAfter" class="img-fluid" alt="Dave's Finished Assignment">
+								<img src="img/affinityChat.png" id="imgAfter" class="img-fluid" alt="Affinity Chat Page">
 							</a>
 						</div>
 						<div class="col-lg-6 order-lg-first">
