--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 					<!-- 1st row -->
 					<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
 						<div class="col-lg-6">
-							<a target="_blank" href="img/affinityLogin.png">
+							<a target="_blank" href="img/affinityLogin.PNG">
 								<img src="img/affinityLogin.png" class="img-fluid" alt="Affinity Login Page">
 							</a>
 						</div>
@@ -187,7 +187,7 @@
 					<!-- 3rd row -->
 					<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
 						<div class="col-lg-6">
-							<a target="_blank" href="img/affinityFriends.png">
+							<a target="_blank" href="img/affinityFriends.PNG">
 								<img src="img/affinityFriends.png" class="img-fluid" alt="Affinity Friends Page">
 							</a>
 						</div>
@@ -213,7 +213,7 @@
 					<!-- 4th row -->
 					<div class="row justify-content-center no-gutters">
 						<div class="col-lg-6">
-							<a target="_blank" href="img/affinityChat.png">
+							<a target="_blank" href="img/affinityChat.PNG">
 								<img src="img/affinityChat.png" class="img-fluid" alt="Affinity Chat Page">
 							</a>
 						</div>
