--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 					<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
 						<div class="col-lg-6">
 							<a target="_blank" href="img/affinityLogin.PNG">
-								<img src="img/affinityLogin.png" class="img-fluid" alt="Affinity Login Page">
+								<img src="img/affinityLogin.PNG" class="img-fluid" alt="Affinity Login Page">
 							</a>
 						</div>
 						<div class="col-lg-6">
@@ -188,7 +188,7 @@
 					<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
 						<div class="col-lg-6">
 							<a target="_blank" href="img/affinityFriends.PNG">
-								<img src="img/affinityFriends.png" class="img-fluid" alt="Affinity Friends Page">
+								<img src="img/affinityFriends.PNG" class="img-fluid" alt="Affinity Friends Page">
 							</a>
 						</div>
 						<div class="col-lg-6">
@@ -214,7 +214,7 @@
 					<div class="row justify-content-center no-gutters">
 						<div class="col-lg-6">
 							<a target="_blank" href="img/affinityChat.PNG">
-								<img src="img/affinityChat.png" class="img-fluid" alt="Affinity Chat Page">
+								<img src="img/affinityChat.PNG" class="img-fluid" alt="Affinity Chat Page">
 							</a>
 						</div>
 						<div class="col-lg-6 order-lg-first">
