--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
 						<div class="col-lg-6 text-center" style="border:1px solid lightgray;">
 							<a target="_blank" href="img/accHomePageLong.png">
-								<img src="img/accHomePageLong.png" id="imgBefore" class="img-fluid" alt="Assignment Example">
+								<img src="img/accHomePageLong.png" id="imgAccPortal" class="img-fluid" alt="Assignment Example">
 							</a>
 						</div>
 						<div class="col-lg-6">
@@ -137,8 +137,8 @@
 					<!-- 1st row -->
 					<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
 						<div class="col-lg-6">
-							<a target="_blank" href="img/affinityLogin.PNG">
-								<img src="img/affinityLogin.PNG" class="img-fluid" alt="Affinity Login Page">
+							<a target="_blank" href="img/affinityLogin.png">
+								<img src="img/affinityLogin.png" id="imgAffinityLogin" class="img-fluid" alt="Affinity Login Page">
 							</a>
 						</div>
 						<div class="col-lg-6">
@@ -166,7 +166,7 @@
 					<div class="row justify-content-center no-gutters">
 						<div class="col-lg-6">
 							<a target="_blank" href="img/affinityProfileLarge.png">
-								<img src="img/affinityProfileLarge.png" class="img-fluid" alt="Affinity Profile Page">
+								<img src="img/affinityProfileLarge.png" id="imgAffinityProfile" class="img-fluid" alt="Affinity Profile Page">
 							</a>
 						</div>
 						<div class="col-lg-6 order-lg-first">
@@ -187,8 +187,8 @@
 					<!-- 3rd row -->
 					<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
 						<div class="col-lg-6">
-							<a target="_blank" href="img/affinityFriends.PNG">
-								<img src="img/affinityFriends.PNG" class="img-fluid" alt="Affinity Friends Page">
+							<a target="_blank" href="img/affinityFriends.png">
+								<img src="img/affinityFriends.png" id="imgAffinityFriends" class="img-fluid" alt="Affinity Friends Page">
 							</a>
 						</div>
 						<div class="col-lg-6">
@@ -213,8 +213,8 @@
 					<!-- 4th row -->
 					<div class="row justify-content-center no-gutters">
 						<div class="col-lg-6">
-							<a target="_blank" href="img/affinityChat.PNG">
-								<img src="img/affinityChat.PNG" class="img-fluid" alt="Affinity Chat Page">
+							<a target="_blank" href="img/affinityChat.png">
+								<img src="img/affinityChat.png" id="imgAffinityChat" class="img-fluid" alt="Affinity Chat Page">
 							</a>
 						</div>
 						<div class="col-lg-6 order-lg-first">
