--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 					<!-- 1st row -->
 					<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
 						<div class="col-lg-6">
-							<a target="_blank" href="img/affinityLogin.png">
-								<img src="img/affinityLogin.png" id="imgAffinityLogin" class="img-fluid" alt="Affinity Login Page">
+							<a target="_blank" href="img/affinityLogin.PNG">
+								<img src="img/affinityLogin.PNG" id="imgAffinityLogin" class="img-fluid" alt="Affinity Login Page">
 							</a>
 						</div>
 						<div class="col-lg-6">
@@ -187,8 +187,8 @@
 					<!-- 3rd row -->
 					<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
 						<div class="col-lg-6">
-							<a target="_blank" href="img/affinityFriends.png">
-								<img src="img/affinityFriends.png" id="imgAffinityFriends" class="img-fluid" alt="Affinity Friends Page">
+							<a target="_blank" href="img/affinityFriends.PNG">
+								<img src="img/affinityFriends.PNG" id="imgAffinityFriends" class="img-fluid" alt="Affinity Friends Page">
 							</a>
 						</div>
 						<div class="col-lg-6">
@@ -213,8 +213,8 @@
 					<!-- 4th row -->
 					<div class="row justify-content-center no-gutters">
 						<div class="col-lg-6">
-							<a target="_blank" href="img/affinityChat.png">
-								<img src="img/affinityChat.png" id="imgAffinityChat" class="img-fluid" alt="Affinity Chat Page">
+							<a target="_blank" href="img/affinityChat.PNG">
+								<img src="img/affinityChat.PNG" id="imgAffinityChat" class="img-fluid" alt="Affinity Chat Page">
 							</a>
 						</div>
 						<div class="col-lg-6 order-lg-first">
