--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<img src="img/davePic.png" class="img-fluid" alt="Picture of Dave">
 						<h2 class="text-white mb-4">About Me</h2>
 						<p class="text-white-50">Hey! My name is Dave and I'm a self-proclaimed "nerd" who loves tech. After spending several years working in sales and finance, I've
-							recently expanded my repertoire of tech knowledge by returning to college to study computer programming. I'm now extremely eager to secure
+							recently expanded my repertoire of tech knowledge by completing the Computer Programmer/Analyst program at Conestoga College. I'm now extremely eager to secure
 							a software development position in the tech industry.
 						</p>
 					</center>
@@ -96,7 +96,7 @@
 					<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
 						<div class="col-lg-6 text-center" style="border:1px solid lightgray;">
 							<a target="_blank" href="img/accHomePageLong.png">
-								<img src="img/accHomePageLong.png" id="imgAccPortal" class="img-fluid" alt="Assignment Example">
+								<img src="img/accHomePageLong.png" id="imgAccPortal" class="img-fluid" alt="Accommod8u Profile Page">
 							</a>
 						</div>
 						<div class="col-lg-6">
